--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -28,6 +28,7 @@
 								<li><a href="https://www.linkedin.com/in/majed-alhindi-2377a5280/" class="icon brands fa fa-linkedin"><span class="label">Linkedin</span></a></li>
 								<li><a href="MajedAlhindi500@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 								<li><a href="https://github.com/0xMajedf" class="icon brands fa fa-github"><span class="label">Twitter</span></a></li>
+								<a class="single" href="#">+966 591596337</a>
 							</ul>
 						</nav>
 					</header>
